--- a/second page css.css
+++ b/second page css.css
@@ -32,4 +32,14 @@ body {
     display: block;
     margin-bottom: 5px;
   }
-
+  .next-button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 15px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 20px;
+    cursor: pointer;
+  }
